# MinCache

./: CMakeLists.txt  CachePolicy.h  LfuCache.h  LruCache.h  README.md  main  main.cpp
.cache/clangd/index/: CachePolicy.h.DBD83BDA9A594555.idx  LruCache.h.71E958A2CFAF22B4.idx  main.cpp.887B546382C83941.idx
